--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 
 <body>
 	<div id="root"></div>
+	<button onclick="getPDF()">Download PDF</button>
 	<script type="module" src="/src/main.jsx"></script>
 </body>
 
+<!-- All three scripts are required -->
+<!-- jsPDF -->
+<script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
+<!-- html2canvas -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<!-- jsPDF + html2canvas -->
+<script src="https://cdn.jsdelivr.net/npm/jspdf-html2canvas@latest/dist/jspdf-html2canvas.min.js"></script>
+<script>
+	const getPDF = () => {
+		const resume = document.getElementById('resume');
+
+		html2PDF(resume, {
+			jsPDF: {
+				format: 'a4',
+			},
+			imageType: 'image/jpeg',
+			output: './pdf/my_resume.pdf'
+		});
+	}
+</script>
 </html>
